1998-08-26  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* POTFILES.in: Removed `gncal/getdate.c'. This file is generated
	from `gncal/getdate.y'.

1998-08-20  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Sanitized for gnomecal.

1998-08-19  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated.

1998-08-17  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* POTFILES.in: Removed a little bunch of missing files from POTFILES.in.

1998-08-16  Martin Baulig  <martin@home-of-linux.org>

	* de.po: Updated German translation.

1998-07-29  Martin Baulig  <martin@home-of-linux.org>

	* POTFILES.in: Removed `gdiskfree/error.c'.

1998-07-23  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Updated Portuguese translation.

	* POTFILES.in: Added gncal-todo.c

Sun Jul 19 23:49:51 1998  Tom Tromey  <tromey@cygnus.com>

	* fr.po: Removed spurious \n.

Thu, 16 Jul 1998 19:31:38 +0200  [Vincent]

	* Added many files to POTFILES.in
	gedit/menus.c gedit/toolbar.c mini-utils/gless/gless.c
	mini-utils/gnome-run/gnome-run.c mini-utils/guname/guname.c
	mini-utils/guname/info.c mini-utils/guname/moreinfo.c
	mini-utils/gw/gw.c gstripchart/gstripchart.c gdiskfree/df.c
	gdiskfree/error.c edit-menus/edit-menus.c
	* Updated fr.po accordingly.

1998-07-01  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* pt.po: Added Portuguese translation.

Sun May 03 03:14:23 1998  Kjartan Maraas  <kmaraas@fib.hl.no>

	* no.po: New file.
	
Tue Mar 10 14:36:52 1998  Eckehard Berns  <eb@berns.prima.de>

	* de.po: updated de.po a bit

Tue, 24 Feb 1998 20:54:04 +0100  Vincent Renardias  <vincent@waw.com>

	* Added gtop/details.c to POTFILES.in
	* `mv gtt/de.po po/de.po`
	* fr.po Updates.

Sun, 22 Feb 1998 18:40:54 +0100  Vincent Renardias  <vincent@waw.com>

	* fr.po: New file.

Mon Feb 16 20:53:55 KST 1998  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* ko.po: New file.
	
