@@ -1,13 +1,6 @@
 edit-menus/edit-menus.c
 gcalc/gcalc.c
 gdiskfree/df.c
-gedit/commands.c
-gedit/gE_about.c
-gedit/gE_document.c
-gedit/gE_plugin_api.c
-gedit/gedit.c
-gedit/menus.c
-gedit/toolbar.c
 genius/calc.c
 genius/eval.c
 genius/genius.c
