@@ -1,3 +1,8 @@
+1998-08-28  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* POTFILES.in: Removed references to gedit files, since they are
+	no longer there.
+
 1998-08-26  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>
 
 	* POTFILES.in: Removed `gncal/getdate.c'. This file is generated
